[package]
name = "gardengnomes"
version = "0.1.0"
authors = ["Inokentiy Babushkin <inokentiy.babushkin@googlemail.com>"]
description = ""
documentation = ""
homepage = "https://ibabushkin.github.io/"
repository = "https://github.com/ibabushkin/gardengnomes"
readme = "README.md"
keywords = []
license = "BSD3"

[dependencies]
goblin = { version = "0.0.2", features = ["no_mach", "no_mach32", "no_pe", "no_pe32", "no_endian_fd"] }
