[package]
name = "gardengnomes"
version = "0.1.0"
authors = ["Inokentiy Babushkin <inokentiy.babushkin@googlemail.com>"]
description = ""
documentation = ""
homepage = "https://ibabushkin.github.io/"
repository = "https://github.com/ibabushkin/gardengnomes"
readme = "README.md"
keywords = []
license = "BSD3"

[dependencies]
xmas-elf = "0.3.0"
